a little more responsive

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Icons -->
+
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
     <title>Cartelera</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- ICONOS -->
+      <!-- Cartelera: home/apps/grid_view -->
+      <!-- Especiales: theaters -->
+      <!-- Precios: payments/wallet -->
+    </div>
     <script src="app/js/script.js"></script>
   </body>
 </html>
