--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
       rel="stylesheet"
     />
     <!-- Icons -->
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
     <title>Cartelera</title>
   </head>
   <body>
-    <div id="root">
-      <!-- ICONOS -->
-      <!-- Cartelera: home/apps/grid_view -->
-      <!-- Especiales: theaters -->
-      <!-- Precios: payments/wallet -->
-    </div>
+    <div id="root"></div>
     <script src="app/js/script.js"></script>
   </body>
 </html>
