--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1f419a" />
 
     <!-- Favicon -->
     <link rel="icon" href="images/logos/GAUMONT_LOGO_blanco.png" />
