--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿"
+    />
+
     <!-- Color ventana Chrome Android -->
     <!-- prettier-ignore -->
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298"/>
