--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <!-- prettier-ignore -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu72xKOzY.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmWUlfBBc4AMP6lQ.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmYUtfBBc4AMP6lQ.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <!-- Icons -->
     <!-- prettier-ignore -->
