--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     />
 
     <!-- Color ventana Chrome Android -->
-    <!-- prettier-ignore -->
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298"/>
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="#1f4298"
+    />
     <!-- Favicon -->
     <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.png" />
     <!-- Fonts -->
