--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="#1f4298"
     />
     <!-- Favicon -->
-    <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.png" />
+    <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.webp" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <!-- prettier-ignore -->
