--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="canonical" href="https://www.gaumont.com.ar/" />
   <meta name="description"
     content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿" />
 
@@ -36,8 +37,8 @@
   <!-- Javascript -->
   <script src="app/js/1-header.js" defer></script>
   <script src="app/js/2-main-cartelera.js" defer></script>
-  <!-- <script src="app/js/2-main-ciclos.js" defer></script> -->
-  <!-- <script src="app/js/2-main-precios.js" defer></script> -->
+  <script src="app/js/2-main-ciclos.js" defer></script>
+  <script src="app/js/2-main-precios.js" defer></script>
   <script src="app/js/3-navbar.js" defer></script>
   <script src="app/js/4-footer.js" defer></script>
   <script src="app/js/app.js" defer></script>
