--- a/index.html
+++ b/index.html
@@ -2,73 +2,36 @@
 <html lang="es">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B51WVQB007"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-B51WVQB007');
-</script>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NRCV9FNG');</script>
-<!-- End Google Tag Manager -->
-  
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="https://www.gaumont.com.ar/" />
   <meta name="description"
     content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿" />
-
   <!-- Color ventana Chrome Android -->
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298" />
   <!-- Favicon -->
   <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.webp" />
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-  <!-- prettier-ignore -->
-  <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu72xKOzY.woff2" as="font"
-    type="font/woff2" crossorigin />
-  <!-- prettier-ignore -->
-  <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmWUlfBBc4AMP6lQ.woff2" as="font"
-    type="font/woff2" crossorigin />
-  <!-- prettier-ignore -->
-  <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmYUtfBBc4AMP6lQ.woff2" as="font"
-    type="font/woff2" crossorigin />
-  <!-- prettier-ignore -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <!-- Icons -->
-  <!-- prettier-ignore -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
-  <!-- Javascript -->
-  <script src="app/js/1-header.js" defer></script>
-  <script src="app/js/2-main-cartelera.js" defer></script>
-  <script src="app/js/2-main-ciclos.js" defer></script>
-  <script src="app/js/2-main-precios.js" defer></script>
-  <script src="app/js/3-navbar.js" defer></script>
-  <script src="app/js/4-footer.js" defer></script>
-  <script src="app/js/app.js" defer></script>
-  <!-- Titulo -->
-  <title>Cine Gaumont</title>
+  <script src="app.js" defer></script>
+
+  <title>Cartelera Gaumont</title>
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRCV9FNG"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-  <div id="root"></div>
+
+  <!-- HEADER -->
+  <header class="header">
+    <!--Logo-->
+    <div class="header-container">
+      <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
+    </div>
+  </header>
+
+  <!-- CARTELERA -->
+  <section id="cartelera">
+    <div class="cartelera-container"></div>
+  </section>
+
 </body>
 
 </html>
