--- a/la-noche-que-luche-contra-dios.html
+++ b/la-noche-que-luche-contra-dios.html
@@ -4,7 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eureka</title>
+  <link rel="canonical" href="https://www.gaumont.com.ar/" />
+  <meta name="description"
+    content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿" />
+  <!-- Color ventana Chrome Android -->
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298" />
+  <!-- Favicon -->
+  <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.webp" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="app.js" defer></script>
+
+  <title>Cartelera Gaumont</title>
 </head>
 
 <body>
