--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-container">
-      <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
+      <a href="/">
+        <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
+      </a>
     </div>
   </header>
 
