--- a/la-noche-que-luche-contra-dios.html
+++ b/la-noche-que-luche-contra-dios.html
@@ -21,7 +21,9 @@
 
   <header class="header">
     <div class="header-container">
-      <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
+      <a href="/">
+        <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
+      </a>
     </div>
   </header>
 
