--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="canonical" href="https://www.gaumont.com.ar/" />
-  <meta name="description"
-    content="Cartelera del Cine Gaumont. Consulta la cartelera, disfruta de emocionantes ciclos temáticos y conoce nuestros atractivos precios. 🎬🍿" />
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298" />
-  <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.webp" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Cartelera Gaumont</title>
-</head>
+    <!-- Color ventana Chrome Android -->
+    <!-- prettier-ignore -->
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#1f4298"/>
+    <!-- Favicon -->
+    <link rel="icon" href="images/logos/GAUMONT_LOGO_BLANCO.png" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <!-- prettier-ignore -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu72xKOzY.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmWUlfBBc4AMP6lQ.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmYUtfBBc4AMP6lQ.woff2" as="font" type="font/woff2" crossorigin />
+    <!-- prettier-ignore -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- Icons -->
+    <!-- prettier-ignore -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 
-<body>
-  <!-- HEADER -->
-  <header class="header">
-    <div class="header-container">
-      <a href="/">
-        <img src="images/logos/GAUMONT_LOGO_azul.webp" alt="Logo Gaumont" class="header-container--logo">
-      </a>
-    </div>
-  </header>
-
-  <!-- CARTELERA -->
-  <section id="cartelera">
-    <div class="cartelera-container"></div>
-  </section>
-
-  <!-- DETALLES DE LA PELÍCULA -->
-  <section id="movie-details" style="display:none;">
-    <h2 id="movie-title"></h2>
-    <img id="movie-poster" src="" alt="Poster">
-    <!-- Agrega más elementos según necesites mostrar otros detalles -->
-  </section>
-
-  <script src="app.js" defer></script>
-</body>
-
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- Javascript -->
+    <script src="app/js/1-header.js" defer></script>
+    <script src="app/js/2-main-cartelera.js" defer></script>
+    <script src="app/js/2-main-ciclos.js" defer></script>
+    <script src="app/js/2-main-precios.js" defer></script>
+    <script src="app/js/3-navbar.js" defer></script>
+    <script src="app/js/4-footer.js" defer></script>
+    <script src="app/js/app.js" defer></script>
+    <!-- Titulo -->
+    <title>Cine Gaumont</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
